--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<--! trying out a local pull request --> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Clockwork</title>
+  </head>
+  <body>
+    <div id="background">
+      <div id="cube" class="grid-1">
+        <div class="front tile grid-1">
+          <div id="clock-grid" class="grid-1"></div>
+          <div id="dotsContainer" class="grid-1">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+        <div class="left tile side grid-1"></div>
+        <div class="right tile side grid-1"></div>
+        <div class="top tile side grid-1"></div>
+        <div class="bottom tile side grid-1"></div>
+      </div>
+      <div id="image-line-container" class="grid-1">
+        <img id="image-line" src="src/Livingroom_Blurred.png" />
+        <div class="klok-text-container">
+          <h1 class="klok-text klok-text-header">Wandklok</h1>
+          <br />
+          <p class="klok-text">
+            Deze klok geeft de tijd aan in woorden in plaats van in cijfers. De
+            minuten worden aangegeven als verlichte stippen in de hoeken.
+          </p>
+          <br />
+          <p class="klok-text">
+            Als coding challenge voor mezelf heb ik deze klok uitgewerkt in
+            HTML, CSS, en JavaScript.
+          </p>
+          <br />
+          <h2 class="klok-text klok-text-subheader">Kleur</h2>
+          <div id="colors-panel" class="btn-panel">
+            <button class="clear-btn color-btn"></button>
+            <button class="clear-btn color-btn"></button>
+            <button class="clear-btn color-btn"></button>
+            <button class="clear-btn color-btn"></button>
+          </div>
+          <br />
+          <h2 class="klok-text klok-text-subheader">Maat</h2>
+          <button id="size-btn" class="clear-btn btn-panel size-btn-text">
+            Middel
+          </button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
